docs/3. devops/k8s/in-one/todo-auth/todo-auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: todo
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: auth:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 40002
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip
  namespace: todo
  labels:
    app: auth
spec:
  ports:
    - name: service0
      port: 40002
      protocol: TCP
      targetPort: 40002
  selector:
    app: auth
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-vservice
  namespace: todo
spec:
  hosts:
    - "*"
  gateways:
    - auth-gateway
  http:
    - match:
        - uri:
            prefix: /api/auth
      route:
        - destination:
            host: auth-clusterip
            port:
              number: 40002
